Fix form margin on narrow viewports

--- a/assets/scss/_masthead.scss
+++ b/assets/scss/_masthead.scss
@@ -101,6 +101,7 @@
   }
 
   @media (max-width: $screen-small-max) {
+    & {margin-bottom: 60px;}
     &, input, button {width: 100% !important;}
   }
 
